<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="wemall_app_name">WeMall开源商城</string>
    <string name="wemall_about_us">关于我们</string>
    <string name="wemall_about_author">Power By:幻舞奇影</string>
    <string name="wemall_add_to_order">加入订单</string>
    <string name="wemall_allgood">全部商品</string>
    <string name="wemall_gpl">使用许可</string>
    <string name="wemall_login_account">帐号</string>
    <string name="wemall_login_account_hint">请输入手机号</string>
    <string name="wemall_version">1.0</string>
    <string name="wemall_type_good">购物中心</string>
    <string name="wemall_type_cart">购物车</string>
    <string name="wemall_type_user">个人中心</string>
    <string name="wemall_press_more">再按一次退出</string>
    <string name="wemall_splash_text">WeMall开源商城系统</string>
    <string name="wemall_regist_btn_text">一 键 登 陆</string>
    <string name="wemall_welcome2">Copyright ©2014&#8211;2015&#8211;幻舞奇影</string>
    <string name="wemall_welcome3">All Rights Reserved</string>
    <string name="wemall_exit">退出应用</string>
    <string name="wemall_about">关于应用</string>
    <string name="wemall_ok">确定</string>
    <string name="wemall_cancel">取消</string>
    <string name="wemall_back">返回</string>
    <string name="wemall_website">官方网站</string>
    <string name="wemall_tieba">百度贴吧</string>
    <string name="wemall_connect_err">连接网络异常</string>
    <string name="wemall_connect_err_hint">待到网络畅通时再重试额</string>
    <string name="wemall_reload">  重新加载  </string>
    <string name="wemall_item_name">默认名字</string>
    <string name="wemall_item_price_end">元</string>
    <string name="wemall_item_price_end2">元/份</string>
    <string name="wemall_item_price">200</string>
    <string name="wemall_item_intro">红烧茄子物美价廉,欢迎来下单订购额最好吃的红烧茄子物美价廉,欢迎来下单订购额</string>
    <string name="wemall_item_oldprice">原价:</string>
    <string name="wemall_menu_title">菜单分类</string>
    <string name="wemall_classall">分类</string>
    <string name="wemall_refresh">刷新</string>
    <string name="wemall_useraddress">欢迎您,新用户,请点击这里设置您的收获地址</string>
    <string name="wemall_usercentername">幻舞奇影</string>
    <string name="wemall_ordercenter">订单中心</string>
    <string name="wemall_usercenterpurse">我的钱包</string>
    <string name="wemall_usercenterclean">清理缓存</string>
    <string name="wemall_usercenterlogout">注销账户</string>
    <string name="wemall_usercenterchangepasswd">修改密码</string>
    <string name="wemall_usercentercollect">收藏中心</string>
    <string name="wemall_regist_name">用&#160;&#160;户&#160;&#160;名</string>
    <string name="wemall_regist_name_hint">请输入用户名</string>
    <string name="wemall_regist_phone">手&#160;&#160;机&#160;&#160;号</string>
    <string name="wemall_regist_phone_hint">请输入手机号</string>
    <string name="wemall_regist_passwd">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="wemall_regist_passwd_hint">请输入密码,至少六位</string>
    <string name="wemall_regist_passwd_repeat">重复密码</string>
    <string name="wemall_regist_passwd_repeat_hint">重复密码</string>
    <string name="wemall_one_key_regist">一键注册</string>
    <string name="wemall_one_key_login">一键登录</string>
    <string name="wemall_regist_clause_t">同意</string>
    <string name="wemall_regist_clause">用户使用条款</string>
    <string name="wemall_one_key_regist2">注册</string>
    <string name="wemall_forgetpasswd">忘记密码</string>
    <string name="wemall_login_passwd">密码</string>
    <string name="wemall_login_passwd_hint">请输入密码</string>
    <string name="wemall_changepasswd_old">当前密码</string>
    <string name="wemall_changepasswd_new">新&#160;&#160;密&#160;&#160;码</string>
    <string name="wemall_changepasswd_button">修改密码</string>
    <string name="wemall_recoverypasswd_button">重置密码</string>
    <string name="wemall_changepasswd_old_hint">请输入当前密码</string>
    <string name="wemall_changepasswd_new_hint">请输入新的密码</string>
    <string name="wemall_changepasswd_new_re_hint">请重复新的密码</string>
    <string name="wemall_neterrtip">网络好像不通，请稍后再试</string>
    <string name="wemall_versiontop">当前版本为最新版，请放心使用</string>
    <string name="wemall_downloading">正在下载升级包，下载完毕将会自动安装，请稍侯......</string>
     <string name="wemall_conn_timeout">连接服务器超时，请稍后重试</string>
    <string name="wemall_cleantiptext">清空应用商城缓存到本地的图像资源可以节约您的存储空间,这并不妨碍您正常使用应用商城,再次打开商品列表时应用会重新加载图像,确认要清除吗?</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载中,请稍候</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉载入更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>