<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white_ffffff"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/wemall_err_connect" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25.0dip"
        android:layout_marginRight="25.0dip"
        android:layout_marginTop="0.0dip"
        android:text="@string/wemall_connect_err"
        android:textColor="#ff888888"
        android:textSize="19.0sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25.0dip"
        android:layout_marginRight="25.0dip"
        android:layout_marginTop="5.0dip"
        android:gravity="center"
        android:text="@string/wemall_connect_err_hint"
        android:textColor="#ff999999"
        android:textSize="12.0sp" />

    <TextView
        android:id="@+id/error_notice_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="0.0dip"
        android:paddingLeft="5.0dip"
        android:paddingRight="5.0dip"
        android:paddingTop="0.0dip"
        android:text="@string/wemall_reload"
        android:textColor="#ff888888"
        android:textSize="19.0sp" />

</LinearLayout>