<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff" >

    <ImageView
        android:id="@+id/splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/wemall_icon_hd" />

    <TextView
        android:id="@+id/textViewcopyright1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/wemall_welcome3"
        android:textColor="@color/wemall_splash_all"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewcopyright1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/wemall_welcome2"
        android:textColor="@color/wemall_splash_all"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/maintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/wemall_splash_text"
        android:textColor="@color/wemall_splash_all"
        android:textSize="20sp" />

</RelativeLayout>