<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:paddingLeft="4dp"
    android:paddingRight="4dp" >

    <LinearLayout
        android:id="@+id/list_image"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:paddingBottom="1.5dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="1.5dp" >

        <FrameLayout
            android:id="@+id/list_item_icon_container"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/wemall_image_bg"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >

            <ImageView
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@color/buttoncommon"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:scaleType="centerCrop"
                android:src="@drawable/wemall_picture_default" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/listtext"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/wemall_item_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/intro"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignLeft="@id/name"
                android:layout_below="@id/name"
                android:gravity="top"
                android:layout_marginRight="4dp"
                android:layout_marginTop="0dp"
                android:ellipsize="end"
                android:text="@string/wemall_item_intro"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/name"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:text="@string/wemall_item_price"
                android:textColor="@color/red"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pricedanwei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="4dp"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@id/price"
                android:text="@string/wemall_item_price_end"
                android:textColor="@color/gray"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/yuanjia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@id/pricedanwei"
                android:text="@string/wemall_item_oldprice"
                android:textColor="@color/gray"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/priceno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_toRightOf="@id/yuanjia"
                android:gravity="bottom"
                android:text="1300"
                android:textColor="@color/gray"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/yuanjiadanwei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@id/priceno"
                android:text="@string/wemall_item_price_end"
                android:textColor="@color/gray"
                android:textSize="10sp" />

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>