<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff" >

    <RelativeLayout
        android:id="@+id/title_layout_about"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/wemall_all_titlebar_back" >

        <LinearLayout
            android:id="@+id/title_left_layout_about"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="70.0dip"
            android:background="@drawable/wemall_background_back"
            android:gravity="center_vertical"
            android:paddingLeft="4.0dip"
            android:paddingRight="0dp" >

            <ImageView
                android:id="@+id/title_left_imagebutton_about"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:duplicateParentState="true"
                android:paddingLeft="0dip"
                android:paddingRight="0dip"
                android:scaleType="center"
                android:src="@drawable/wemall_back_btn" />

            <TextView
                android:id="@+id/title_text_about"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="5.0dip"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:minWidth="30.0dip"
                android:paddingLeft="0dp"
                android:paddingRight="0dip"
                android:singleLine="true"
                android:text="关于应用"
                android:textColor="@color/white_ffffff"
                android:textSize="22sp" />
        </LinearLayout>
    </RelativeLayout>
    <!-- 以上为Bar布局 -->

    <RelativeLayout
        android:id="@+id/publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout_about"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55.0dip"
        android:layout_marginTop="30.0dip" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="70.0dip"
            android:layout_height="70.0dip"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/wemall_icon_hd" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/wemall_app_name"
            android:textColor="@color/black_555555"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="15.0dip"
            android:text="@string/wemall_version"
            android:textColor="@color/gray_999999"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/publish"
        android:layout_marginLeft="17.0dip"
        android:layout_marginRight="17.0dip"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/about_catagory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wemall_about_us"
            android:textColor="@color/black_555555"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/about_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_title"
        android:layout_marginLeft="17.0dip"
        android:layout_marginRight="17.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/wemall_content_frame"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/about_official_site"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="1.0dip"
            android:layout_marginRight="1.0dip"
            android:layout_marginTop="1.0dip"
            android:background="@drawable/wemall_white_to_gray"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:text="@string/wemall_website"
                android:textColor="@color/gray_939393"
                android:textSize="13.0sp" />

            <View
                android:layout_width="10.0dip"
                android:layout_height="16.0dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/wemall_detail_indicata_right" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/wemall_line_horizon"
            android:background="@color/white_e0e0e0" />

        <RelativeLayout
            android:id="@+id/about_official_tieba"
            android:layout_width="fill_parent"
            android:layout_height="37.0dip"
            android:layout_marginBottom="1.0dip"
            android:layout_marginLeft="1.0dip"
            android:layout_marginRight="1.0dip"
            android:background="@drawable/wemall_white_to_gray"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:text="@string/wemall_tieba"
                android:textColor="@color/gray_939393"
                android:textSize="13.0sp" />

            <View
                android:layout_width="10.0dip"
                android:layout_height="16.0dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/wemall_detail_indicata_right" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/wemall_line_horizon"
            android:background="@color/white_e0e0e0" />

        <RelativeLayout
            android:id="@+id/about_app_checkupdate"
            android:layout_width="fill_parent"
            android:layout_height="37.0dip"
            android:layout_marginBottom="1.0dip"
            android:layout_marginLeft="1.0dip"
            android:layout_marginRight="1.0dip"
            android:background="@drawable/wemall_white_to_gray"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:text="检查升级"
                android:textColor="@color/gray_939393"
                android:textSize="13.0sp" />

            <View
                android:layout_width="10.0dip"
                android:layout_height="16.0dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/wemall_detail_indicata_right" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/wemall_line_horizon"
            android:background="@color/white_e0e0e0" />

        <RelativeLayout
            android:id="@+id/about_official_gpl"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="1.0dip"
            android:layout_marginRight="1.0dip"
            android:layout_marginTop="1.0dip"
            android:background="@drawable/wemall_white_to_gray"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:text="@string/wemall_gpl"
                android:textColor="@color/gray_939393"
                android:textSize="13.0sp" />

            <View
                android:layout_width="10.0dip"
                android:layout_height="16.0dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/wemall_detail_indicata_right" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/wemall_line_horizon"
            android:background="@color/white_e0e0e0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wemall_teiron"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10.0dip"
        android:layout_marginTop="30.0dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:gravity="center_horizontal"
            android:text="@string/wemall_about_author"
            android:textColor="#ffbababa"
            android:textSize="12.0sp" />
    </LinearLayout>

</RelativeLayout>